--- a/app/themes/default/locales/mongoid.en.yml
+++ b/app/themes/default/locales/mongoid.en.yml
@@ -139,6 +139,7 @@ en:
       "configs/category": "Category Setting"
       "configs/schedule": Exec Schedule
       "configs/global": Global Settings
+      "configs/hook": Hook Settings
       "contents/web": "contents data"
       "configs/tokens/chatwork": Chatwork Settings
       "configs/tokens/slack": Slack Settings
