--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ In the future, we aim to be an OSS that can easily build a portal site.
 | Documentation | https://doc.newsdict.io/
 | Yard | https://doc.newsdict.io/yard/
 |===
- 
+
 == Getting Start
 
 === 1. Install docker
@@ -33,18 +33,29 @@ $ git submodule update --init --recursive
   Initial superuser name
  - `ADMIN_DEFALT_PASSWORD`
   Initial superuser password
-  
+
 === 5. Start development server
 
-==== Foreground
-```
-$ docker/start
-```
+- Foreground
 
-==== Daemonize
-```
+``
+$ docker/start
+``
+
+- Daemonize
+
+``
 $ docker/start -d
-```
+``
+
+== Story Point
+
+1.  Change the wording of view. / Change the wording of locale.
+2.  Change variable name in method. / Fixed a few lines using the rails feature.
+3.  Modification using the function of the linked product. / Linking the method.
+5.  Implementation of confirmed functions on Qiita and stack overflow.
+8.  Implementation of unique functions.
+13. Combination of implementation of original function and implementation of function with implementation procedure.
 
 ## Contributing
 
