--- a/app/themes/default/locales/rails_admin.en.yml
+++ b/app/themes/default/locales/rails_admin.en.yml
@@ -9,6 +9,7 @@ en:
       other_system_admin: Other System Admin
       inquiries_management: Inquiries Management
       notify_setting: Notify Setting
+      posts: Posts
     js:
       true: True
       false: False
