--- a/app/themes/default/locales/rails_admin.ja.yml
+++ b/app/themes/default/locales/rails_admin.ja.yml
@@ -9,6 +9,7 @@ ja:
       other_system_admin: その他の管理画面
       inquiries_management: 問い合わせ管理
       notify_setting: 通知設定
+      posts: 投稿設定
     js:
       true: True
       false: False
