--- a/app/themes/default/locales/mongoid.ja.yml
+++ b/app/themes/default/locales/mongoid.ja.yml
@@ -139,12 +139,13 @@ ja:
       "configs/theme": テーマ
       "configs/schedule": 実行時刻設定
       "configs/global": 共通設定
-      "configs/hook": 通知タイミング設定
-      "configs/tokens/chatwork": Chatwork設定
-      "configs/tokens/slack": Slack設定
-      "configs/tokens/smtp": SMTP設定(メール送信設定)
-      "configs/tokens/twitter": Twitter設定
+      "configs/hook": Hook設定
+      "configs/tokens/chatwork": Chatwork API
+      "configs/tokens/slack": Slack API
+      "configs/tokens/smtp": SMTP Setting
+      "configs/tokens/twitter": Twitter API
       "contents/web": 記事情報
+      "posts/twitter": Twitter投稿
       inquiry: 問い合わせ
     errors:
       messages:
