--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,6 @@
 image:https://raw.githubusercontent.com/newsdict/newsdict.io/master/logo.png[]
 
+image:https://github.com/newsdict/newsdict.io/workflows/MiniTest/badge.svg[MiniTest]
 image:https://img.shields.io/github/v/release/newsdict/newsdict.io[Release]
 image:https://img.shields.io/github/license/newsdict/newsdict.io[License]
 image:https://action-badges.now.sh/newsdict/newsdict.io[Build]
