--- a/src/doc/ja/worker.adoc
+++ b/src/doc/ja/worker.adoc
@@ -17,4 +17,4 @@ newsdict.ioではActionJob(sidekiq)を使用しています。 +
 また、管理画面のURLは管理画面からジョブ管理で見ることが可能です。 +
 管理画面のURLは/sidekiqですが、管理画面にログインせずに直接見ることはできません。
 
-link:/[Back To The Top]
+= link:/[目次へ戻る]
