--- a/README.adoc
+++ b/README.adoc
@@ -5,8 +5,7 @@ image:https://img.shields.io/github/v/release/newsdict/newsdict.io[Release]
 image:https://img.shields.io/github/license/newsdict/newsdict.io[License]
 image:https://action-badges.now.sh/newsdict/newsdict.io[Build]
 
-A Rails app that lists the articles that the account you follow has created. +
-In the future, we aim to be an OSS that can easily build a portal site.
+newsdict.io is a news platform that can express the news shared by Publisher in various ways.
 
 == Documentation
 
