--- a/app/themes/default/locales/rails_admin.en.yml
+++ b/app/themes/default/locales/rails_admin.en.yml
@@ -1,164 +1,164 @@
-en:
+ja:
   admin:
     navigation:
-      sources: Sources
-      setting: Setting
-      portal_setting: Portal View Setting
-      crawling_setting: Crawling Setting
-      admin_setting: Admin Setting
-      other_system_admin: Other System Admin
-      inquiries_management: Inquiries Management
-      notify_setting: Notify Setting
-      posts: Posts
+      content: 記事
+      source: ソース元
+      setting: 設定
+      portal_setting: ポータル画面設定
+      crawling_setting: クローリング設定
+      admin_setting: 管理画面設定
+      other_system_admin: その他の管理画面
+      inquiries_management: 問い合わせ管理
+      notify_setting: 通知設定
+      posts: 投稿設定
     js:
       true: True
       false: False
-      is_present: Is present
-      is_blank: Is blank
-      date: Date ...
-      between_and_: Between ... and ...
-      today: Today
-      yesterday: Yesterday
-      this_week: This week
-      last_week: Last week
-      number: Number ...
-      contains: Contains
-      is_exactly: Is exactly
-      starts_with: Starts with
-      ends_with: Ends with
-      too_many_objects: "Too many objects, use search box above"
-      no_objects: "No objects found"
-    loading: "Loading..."
-    toggle_navigation: Toggle navigation
+      is_present: 存在する
+      is_blank: 空白
+      date: 日付 ...
+      between_and_: ... から ...
+      today: 今日
+      yesterday: 昨日
+      this_week: 今週
+      last_week: 先週
+      number: 数字 ...
+      contains: 含む
+      is_exactly: 完全に一致
+      starts_with: で始まる
+      ends_with: で終わる
+      too_many_objects: "対象が多すぎます、上の検索ボックスを使用してください"
+      no_objects: "対象が見つかりません"
+    loading: "読み込み中..."
+    toggle_navigation: ナビゲーション切り替え
     home:
-      name: "Home"
+      name: "ホーム"
     pagination:
-      previous: "&laquo; Prev"
-      next: "Next &raquo;"
+      previous: "&laquo; 前"
+      next: "次 &raquo;"
       truncate: "…"
     misc:
-      search: "Search"
-      filter: "Filter"
-      reset_filters: "Reset filters"
-      refresh: "Refresh"
-      show_all: "Show all"
-      add_filter: "Add filter"
-      bulk_menu_title: "Selected items"
-      remove: "Remove"
-      add_new: "Add new"
-      chosen: "Chosen %{name}"
-      chose_all: "Choose all"
-      clear_all: "Clear all"
-      up: "Up"
-      down: "Down"
-      navigation: "Navigation"
-      root_navigation: "Actions"
-      navigation_static_label: "Links"
-      log_out: "Log out"
-      time_ago: "%{time} ago"
-      ago: "ago"
-      more: "Plus %{count} more %{models_name}"
+      search: "検索"
+      filter: "検索"
+      refresh: "更新"
+      show_all: "すべて表示"
+      add_filter: "絞り込む..."
+      bulk_menu_title: "選択項目を..."
+      remove: "削除"
+      add_new: "新規作成"
+      chosen: "選択された%{name}"
+      chose_all: "すべて選択"
+      clear_all: "選択解除"
+      up: "上"
+      down: "下"
+      navigation: "ナビゲーション"
+      root_navigation: "アクション"
+      navigation_static_label: "リンク"
+      log_out: "ログアウト"
+      time_ago: "%{time}前"
+      ago: "前"
+      more: "さらに %{count} 個以上の %{models_name}"
     flash:
-      successful: "%{name} successfully %{action}"
-      error: "%{name} failed to be %{action}"
-      noaction: "No actions were taken"
-      model_not_found: "Model '%{model}' could not be found"
-      object_not_found: "%{model} with id '%{id}' could not be found"
+      successful: "%{name}の%{action}に成功しました"
+      error: "%{name}の%{action}に失敗しました"
+      noaction: "操作を取り消しました"
+      model_not_found: "モデル'%{model}'はありません"
+      object_not_found: "'ID:%{id}'の%{model}はありません"
     table_headers:
-      model_name: "Model name"
-      last_created: "Last created"
-      records: "Records"
-      username: "User"
-      changes: "Changes"
-      created_at: "Date/Time"
-      item: "Item"
-      message: "Message"
+      model_name: "モデル名"
+      last_used: "最終アクセス日"
+      records: "レコード数"
+      username: "ユーザ"
+      changes: "変更"
+      created_at: "日時"
+      item: "アイテム"
+      message: "メッセージ"
     actions:
       dashboard:
-        title: "Site Administration"
-        menu: "Dashboard"
-        breadcrumb: "Dashboard"
+        title: "サイト管理"
+        menu: "ダッシュボード"
+        breadcrumb: "ダッシュボード"
       index:
-        title: "List of %{model_label_plural}"
-        menu: "List"
+        title: "%{model_label_plural}の一覧"
+        menu: "一覧"
         breadcrumb: "%{model_label_plural}"
       show:
-        title: "Details for %{model_label} '%{object_label}'"
-        menu: "Show"
+        title: "%{model_label} '%{object_label}'の詳細"
+        menu: "詳細"
         breadcrumb: "%{object_label}"
       show_in_app:
-        menu: "Show in app"
+        menu: "表示"
       new:
-        title: "New %{model_label}"
-        menu: "Add new"
-        breadcrumb: "New"
-        link: "Add a new %{model_label}"
-        done: "created"
+        title: "新規%{model_label}"
+        menu: "新規作成"
+        breadcrumb: "新規"
+        link: "新規%{model_label}追加"
+        done: "作成"
       edit:
-        title: "Edit %{model_label} '%{object_label}'"
-        menu: "Edit"
-        breadcrumb: "Edit"
-        link: "Edit this %{model_label}"
-        done: "updated"
+        title: "%{model_label} '%{object_label}'を編集"
+        menu: "編集"
+        breadcrumb: "編集"
+        link: "この%{model_label}を編集"
+        done: "更新"
       delete:
-        title: "Delete %{model_label} '%{object_label}'"
-        menu: "Delete"
-        breadcrumb: "Delete"
-        link: "Delete '%{object_label}'"
-        done: "deleted"
+        title: "%{model_label} '%{object_label}'を削除"
+        menu: "削除"
+        breadcrumb: "削除"
+        link: "'%{object_label}'削除"
+        done: "削除"
       bulk_delete:
-        title: "Delete %{model_label_plural}"
-        menu: "Multiple delete"
-        breadcrumb: "Multiple delete"
-        bulk_link: "Delete selected %{model_label_plural}"
+        title: "%{model_label_plural}を一括削除"
+        menu: "一括削除"
+        breadcrumb: "一括削除"
+        bulk_link: "選択した%{model_label_plural}を削除"
       export:
-        title: "Export %{model_label_plural}"
-        menu: "Export"
-        breadcrumb: "Export"
-        link: "Export found %{model_label_plural}"
-        bulk_link: "Export selected %{model_label_plural}"
-        done: "exported"
+        title: "%{model_label}をエクスポート"
+        menu: "エクスポート"
+        breadcrumb: "エクスポート"
+        link: "%{model_label_plural}をエクスポート"
+        bulk_link: "選択した%{model_label_plural}をエクスポート"
+        done: "エクスポート"
       history_index:
-        title: "History for %{model_label_plural}"
-        menu: "History"
-        breadcrumb: "History"
+        title: "%{model_label_plural}の更新履歴"
+        menu: "履歴"
+        breadcrumb: "履歴"
       history_show:
-        title: "History for %{model_label} '%{object_label}'"
-        menu: "History"
-        breadcrumb: "History"
+        title: "%{model_label} '%{object_label}'の履歴"
+        menu: "履歴"
+        breadcrumb: "履歴"
     form:
-      cancel: "Cancel"
-      basic_info: "Basic info"
-      required: "Required"
-      optional: "Optional"
-      one_char: "character"
-      char_length_up_to: "length up to"
-      char_length_of: "length of"
-      save: "Save"
-      save_and_add_another: "Save and add another"
-      save_and_edit: "Save and edit"
-      all_of_the_following_related_items_will_be_deleted: "? The following related items may be deleted or orphaned:"
-      are_you_sure_you_want_to_delete_the_object: "Are you sure you want to delete this %{model_name}"
-      confirmation: "Yes, I'm sure"
-      bulk_delete: "The following objects will be deleted, which may delete or orphan some of their related dependencies:"
-      new_model: "%{name} (new)"
+      cancel: "キャンセル"
+      basic_info: "基本情報"
+      required: "必須"
+      optional: "オプション"
+      one_char: "文字"
+      char_length_up_to: "最大文字数:"
+      char_length_of: "文字数:"
+      save: "保存"
+      save_and_add_another: "保存して次へ"
+      save_and_edit: "保存して編集"
+      all_of_the_following_related_items_will_be_deleted: "を削除してよろしいですか? 以下の項目が削除され、もしくは関係を失います:"
+      are_you_sure_you_want_to_delete_the_object: "%{model_name}の項目"
+      confirmation: "実行する"
+      bulk_delete: "以下の項目が削除され、それによって関連する項目が削除され、もしくは関係を失います:"
+      new_model: "%{name} (新規)"
     export:
-      confirmation: "Export to %{name}"
-      select: "Select fields to export"
-      select_all_fields: "Select All Fields"
-      fields_from: "Fields from %{name}"
-      fields_from_associated: "Fields from associated %{name}"
-      display: "Display %{name}: %{type}"
-      options_for: "Options for %{name}"
+      confirmation: "%{name}としてエクスポート"
+      select: "エクスポートするフィールドを選択してください"
+      select_all_fields: "全フィールドを選択"
+      fields_from: "%{name}のフィールド"
+      fields_from_associated: "関連する%{name}のフィールド"
+      display: "カラム:%{name} 型:%{type}"
+      options_for: "%{name}の出力オプション"
       empty_value_for_associated_objects: "<empty>"
-      click_to_reverse_selection: 'Click to reverse selection'
+      click_to_reverse_selection: 'クリックで選択を反転します'
       csv:
         header_for_root_methods: "%{name}" # 'model' is available
         header_for_association_methods: "%{name} [%{association}]"
-        encoding_to: "Encode to"
-        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
-        skip_header: "No header"
-        skip_header_help: "Do not output a header (no fields description)"
+        encoding_to: "文字コード"
+        encoding_to_help: "空白の場合は%{name}になります"
+        skip_header: "ヘッダなし"
+        skip_header_help: "チェックすると出力にヘッダ行を含めません"
         default_col_sep: ","
-        col_sep: "Column separator"
-        col_sep_help: "Leave blank for default ('%{value}')" # value is default_col_sep
+        col_sep: "区切り文字"
+        col_sep_help: "空白の場合は'%{value}'区切りです" # value is default_col_sep
