--- a/app/themes/default/locales/mongoid.ja.yml
+++ b/app/themes/default/locales/mongoid.ja.yml
@@ -103,7 +103,7 @@ ja:
         enable_starttls_auto: STARTTLSの有効化
         sender: 送信元メールアドレス
         is_default: デフォルトで使用する
-      "configs/tokens/twitter":
+      "configs/tokens/twitter_account":
         key: 名前
         description: 概要
         consumer_key: Consumer Key
@@ -143,7 +143,7 @@ ja:
       "configs/tokens/chatwork": Chatwork API
       "configs/tokens/slack": Slack API
       "configs/tokens/smtp": SMTP Setting
-      "configs/tokens/twitter": Twitter API
+      "configs/tokens/twitter_account": Twitter API
       "contents/web": From Web Site
       "contents/tweet": From Twitter
       "posts/twitter": Twitter投稿
