--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,8 @@ image:https://raw.githubusercontent.com/newsdict/newsdict.io/master/logo.png[]
 image:https://github.com/newsdict/newsdict.io/workflows/MiniTest/badge.svg[MiniTest]
 image:https://img.shields.io/github/v/release/newsdict/newsdict.io[Release]
 image:https://img.shields.io/github/license/newsdict/newsdict.io[License]
+[link=https://coveralls.io/github/newsdict/newsdict.io]
+image:https://coveralls.io/repos/github/newsdict/newsdict.io/badge.svg[Coveralls]
 
 newsdict.io is a news platform that can express the news shared by Publisher in various ways.
 
