--- a/src/doc/index.adoc
+++ b/src/doc/index.adoc
@@ -2,8 +2,6 @@
 :sectlinks:
 :toc-title: 目次
 
-include::ja/google_translate.adoc[]
-
 [caption="Correct the conntents from Internet."]
 image:https://raw.githubusercontent.com/newsdict/newsdict.io/master/logo.png[]
 
@@ -11,18 +9,22 @@ include::../../README.adoc[lines=2..6]
 
 newsdict.ioは、Publisherがシェアしているニュースを様々な形で表現できるニュースプラットフォームです。
 
+---
+
+include::ja/google_translate.adoc[]
+
 == Documents
 |===
 | link:ja/getting_start/[Getting Start] | 簡単に起動できる方法を紹介します。
 | link:ja/overview/[Overview] | アプリの構成を紹介しています。
-| link:ja/docker[Docker] | Docker上のシステムの宗田方法を紹介しています。
+| link:ja/docker[Docker] | newsdict.ioで使用するコンテナについて
 | link:ja/setting/[Setting] | 動作に必要な設定方法を紹介しています。
 | link:ja/worker/[Worker] | 定期的なジョブを実行するワーカーについて紹介しています。
 | link:ja/theme/[Theme] | アプリで使用するテーマについて紹介します。
 | link:ja/api/[Api] | APIについて紹介します。
-| link:ja/document/[Document] | About Documentation
+| link:ja/document/[Document] | asciidoctorとyardを使用したドキュメントについて解説します。
 | link:ja/admin/[Admin] | 管理画面について紹介します。
-| link:ja/debug/[Debug] | Programing Debug Guide
-| link:ja/programing_guide/[Programing Guide] | Prgraming Guide
-| link:yard[YardDoc] | YardDoc
+| link:ja/debug/[Debug] | デバッグ方法について解説します。
+| link:ja/programing_guide/[Programing Guide] | Programing Guide
+| link:yard[YardDoc] | newsdict.ioのYardDocです。
 |===
