--- a/src/doc/ja/overview.adoc
+++ b/src/doc/ja/overview.adoc
@@ -1,8 +1,8 @@
 :toc: left
 
-include::google_translate.adoc[]
-
 = 構成
+
+include::google_translate.adoc[]
 
 === Description
 newsdict.ioは、docker上で構築されdocker-composeを使うとすぐに動作させることが可能です。
@@ -31,11 +31,10 @@ newsdict.ioはRailsアプリでsidekiqで構成されています。ドキュメ
 `docker/start`コマンドですべてが立ち上がります。
 立ち上がった後アクセス可能なサービスは以下の通りです
 |===
-| Rails app | newsdict.io本体 | http://localhost:3100
-| Rails_Admin | 管理画面 | http://localhost:3100/admin
-| Sidekiq Web | Swidekiq 管理画面 | http://localhost:3100/sidekiq
-| asciidoctor | ドキュメント(開発用 - リアルタイム反映) | http://localhost:3000
-| asciidoctor | ドキュメント(本番用 - nginx経由) | http://localhost:8080
+| Rails app | newsdict.io本体 | http://localhost:3000
+| Rails_Admin | 管理画面 | http://localhost:3000/admin
+| Sidekiq Web | Swidekiq 管理画面 | http://localhost:3000/sidekiq
+| asciidoctor | ドキュメント | http://localhost:3100
 | browsersync UI | ドキュメント管理画面 | http://localhost:3001
 |===
 
@@ -68,5 +67,4 @@ User --> web
 User --> documentor
 ....
 
-
-= link:/[目次へ戻る]
+link:/[目次へ戻る]
