--- a/src/doc/ja/setting.adoc
+++ b/src/doc/ja/setting.adoc
@@ -2,12 +2,32 @@
 :sectlinks:
 :toc-title: 目次
 
+= Setting
+[.env]ファイルの設定内容について.env-exampleを参考に説明します。
+
 include::google_translate.adoc[]
 
-= Setting
-[.env]ファイルの設定内容について説明します。
+=== 名前空間
+redis, mongodb, sidekiqなどのNAMESPACEに使用されます。
 
-== Default Locale
+ NAMESPACE=newsdict
+
+=== 本番用FQDN
+workerからtwitterに投稿される際に使われるFQDNです。
+
+ PROD_FQDN=https://newsdict.jp
+
+=== 開発用domain
+pumaでローカルドメインを待ち受けるために使用されます。
+
+ LOCAL_DOMAIN=newsdict.jp
+
+=== Timezone
+railsのtimezoneを設定します。
+
+ TIMEZONE=Tokyo
+
+=== Default Locale
 アプリ言語コードを設定します。
 
  default_locale=ja
@@ -17,6 +37,8 @@ include::google_translate.adoc[]
 デフォルトテーマでは、最大ユーザ数に到達するとトップページに管理画面へのリンク[Setting]が出なくなります。
 
  MAX_MEMBER_COUNT=2
+ 
+=== 送信元メールアドレス
 
 === super_admin email
 管理者ユーザのメールアドレスを設定します。 +
@@ -27,13 +49,13 @@ include::google_translate.adoc[]
 === redis host and port
 ワーカーにsidekiqを使用しており、storageにはredisを使用しています。
 
-  REDIS_HOST=dummy.com
-  SIDEKIQ_NAMESPACE=sidekiq
+ REDIS_HOST=dummy.com
+ SIDEKIQ_NAMESPACE=sidekiq
 
 === mongodb host
 メインDBにmongodbを使用しているので適切なホスト名を設定してください。
 
-  MONGODB_HOST=dummy.com
+ MONGODB_HOST=dummy.com
 
 === webpack-dev-server
 開発環境で使用するwebpackerドメイン名を設定します。
@@ -45,29 +67,10 @@ include::google_translate.adoc[]
 
  RAILS_LOG_TO_STDOUT=1
 
-=== action mailer settings
-ユーザ登録する際に送られるメール設定を行います。 +
-次期リリースで管理画面で変更できるようにする予定です。
+=== asciidoctor用のskin名
+link:https://github.com/darshandsoni/asciidoctor-skins[asciidoctor-skins]のテーマ名を指定します。 +
+これはdocumentで使用されるasciidoctorのテーマに使用されます。
 
- MAILER_SMTP=dummy.com
- MAILER_PORT=587
- MAILER_DOMAIN=dummy.com
- MAILER_USER_NAME=dummy
- MAILER_PASSWORD=dummy
- MAILER_AUTHENTICATION=login
- MAILER_ENABLE_STARTTLS_AUTO=true
+ asciidoctor_theme=boot-darkly
 
-=== mailer_sender used by devise
-送信されるメールのfromに記載するメールアドレスを設定します。
-
- MAILER_SENDER=dummy
-
-=== twitter api keys
-ツイッターのAPI設定を行います。
-
- TWITTER_CONSUMER_KEY=dummy
- TWITTER_CONSUMER_SECRET=dummy
- TWITTER_ACCESS_TOKEN=dummy
- TWITTER_ACCESS_SECRET=dummy
-
-= link:/[目次へ戻る]
+link:/[目次へ戻る]
