--- a/src/doc/ja/worker.adoc
+++ b/src/doc/ja/worker.adoc
@@ -1,20 +1,17 @@
 :toc: left
 
 = Worker
+newsdict.ioではActionJob(sidekiq)を使用しています。workerコンテナにより実行されます。
 
-newsdict.ioではActionJob(sidekiq)を使用しています。 +
+include::google_translate.adoc[]
+
+== ジョブの一覧
+
+https://github.com/newsdict/newsdict.io/blob/main/config/sidekiq.yml
+
+sidekiqの管理画面のURLは/sidekiqですが、管理画面にログインせずに直接見ることはできません。 +
 ジョブはデフォルトオフにしているので、必要に応じて管理画面から有効化してください。
 
-ジョブの一覧は以下です。
-|===
-|名前|インターバル|クラス|ファイル
-|sitemap_job|0 0 0 * * *|SitemapsJob|app/jobs/sitemap_job.rb
-|twitter_account_job|0 */3 * * *|TwitterAccountsJob|app/jobs/twitter_account_job.rb
-|update_mecab_dic_job|0 0 * * * *|UpdateMecabDicsJob|app/jobs/user_mecab_dics_job.rb
-|urls_job|0 */3 * * *|UrlsJob|app/jobs/urls_job.rb	
-|===
 
-また、管理画面のURLは管理画面からジョブ管理で見ることが可能です。 +
-管理画面のURLは/sidekiqですが、管理画面にログインせずに直接見ることはできません。
 
-= link:/[目次へ戻る]
+link:/[目次へ戻る]
