Update locate and template.

--- a/app/themes/default/locales/en.yml
+++ b/app/themes/default/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  site_description: newsdict.jp is a news platform that can express the news shared by Publisher in various ways.
   related_contents: Related Content
   tagcloud: Tag Cloud
   request_removing: Request removing
